--- a/.github/workflows/r-seurat4-image.yml
+++ b/.github/workflows/r-seurat4-image.yml
@@ -14,6 +14,7 @@ jobs:
       packages: write
     env:
       IMAGE_NAME: seurat4
+      #GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: "Build:checkout"
         uses: actions/checkout@v2
